# PassInspector

./: .gitignore  LICENSE  README.md  passinspector.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
passinspector/: check_for_no_aes.py  config.py  dehexify.py  export_xlsx.py  lm_hash_cracker.py  pass_inspector_args.py  passinspector.py  stats.py  user.py  utils.py
tests/: test_leetspeak.py  test_passinspector.py  test_utils.py
tests/data/: admins.txt  cracked.txt  credstuff.txt  dcsync.txt  emails-unverified.txt  enabled.txt  kerberoastable.txt  local_hashes.txt  spray_passwords.txt  spray_users.txt  students.json  students.txt
